fix variant gallery gap

--- a/blocks/v2-media-with-text/v2-media-with-text.css
+++ b/blocks/v2-media-with-text/v2-media-with-text.css
@@ -97,7 +97,7 @@
 
 .v2-media-with-text--media-gallery .v2-media-with-text__media-section {
   display: flex;
-  gap: 20px;
+  gap: 8px;
   scroll-snap-type: x mandatory;
   overflow: auto;
   flex-flow: row nowrap;
@@ -155,6 +155,10 @@
     width: 506px;
   }
 
+
+  .v2-media-with-text--media-gallery .v2-media-with-text__media-section {
+    gap: 20px;
+  }
 }
 
 @media (min-width: 1200px) {
